--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,40 @@ button{
   border-radius: .2rem;
   background-color:rgb(224, 157, 188) ;
 }
+#outputValue{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+#spinner{
+  width: 100px;  
+  height: 100px;
+ border: 10px solid ;
+ border-radius: 50%;
+
+  border-top: 10px solid rgb(224, 157, 188);  
+  border-left: 10px solid rgb(240, 234, 237);
+  border-right: 10px solid rgb(240, 234, 237);
+  border-bottom:10px solid  rgb(224, 157, 188);
+  animation: spin 2s linear infinite; 
+  display: none;
+position: fixed;
+top: 40%;
+left: 45%;
+transform: translate(-50%, -50%);
+align-self: center;
+z-index: 1000;
+
+
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
  @media screen and (max-width: 600px) {
   #app{
     display: flex;
