Complete code fetching cat facts

--- a/src/style.css
+++ b/src/style.css
@@ -39,7 +39,7 @@ button{
   background-color:rgb(224, 157, 188) ;
 }
 #outputValue{
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
